# ashare-factory

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
codex-tasks/: 2026-06-01-notebook-01-issues.md  TASK_BOARD.md  code-review-issues.md
codex-tasks/tasks/: 2026-05-31-code-review-issues.md  2026-05-31-redundancy-fix.md  2026-06-01-cumulative-return-bug.md  2026-06-01-factor-data-fixes.md  2026-06-01-factor-eval-engine.md  2026-06-01-notebook-01-issues.md  2026-06-07-factor-factory-plan-review.md  2026-06-07-factor-factory-v1-implementation.md  2026-06-07-factor-factory-v1-review-fixes.md  2026-06-07-survivorship-bias-fixes.md  2026-06-08-ashare-radar-v1.md
configs/: evaluation.yaml  factor_registry.yaml  universe.yaml
configs/ashare_radar/: news.yaml  style_buckets.yaml
docs/: PROJECT_MAP.md  README.md  prompt-for-codex-redundancy-fix.md  worklog.md
docs/plans/: 2026-05-31-ashare-data-foundation-phase1.md  2026-05-31-broad-index-membership-ingest.md  2026-05-31-single-factor-research-mvp.md  2026-06-01-next-phase-plan.md  2026-06-02-short-term-factor-library-registry.md  (+6 more)
notebooks/: 01_single_factor_mvp.ipynb  02_single_factor_eval.ipynb
scripts/: build_02_notebook.py
src/: factor_utils.py
tests/: test_ashare_factor_cli.py  test_ashare_factor_metrics.py  test_cli.py  test_dq.py  test_factor_eval.py  test_factor_research_preprocessing.py  test_factor_utils.py  test_ingest_history.py  test_ingest_storage.py  test_ingest_verbose.py  test_panel_and_dq.py  test_panel_range.py  test_sample_builder.py  test_tushare_client.py
(+52 files in other folders)
