[project]
name = "ashare-data-foundation"
version = "0.2.0"
description = "Local A-share daily data foundation with Tushare, Parquet, DuckDB, and historical ingest."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "seaborn>=0.13.0",
    "tabulate>=0.9.0",
    "tushare>=1.4.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.8.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
ashare-data = "ashare_data.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
